--- a/Personal_website/package.json
+++ b/Personal_website/package.json
@@ -12,11 +12,10 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.15",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "3.4",
     "vite": "^6.2.2",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
